Ported Mono.Upnp and Mono.SSdp to classlib 2.0. Ported tests to NUNit 3.x and fixed compatability issues.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ obj
 src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.FileSystem.ConsoleServer/mono-upnp-simple-media-server
 src/Mono.Upnp/Mono.Upnp.GtkClient/mono-upnp-gtk
 test-results/
+/.vs/Mono.Upnp
